# serial_tool_gfx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  project.yml
.github/workflows/: makefile.yml
scripts/: build.sh  process_results.sh  test.sh
src/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c
src/app/: CMakeLists.txt  app.c  app.h  app_cli.c  app_cli.h
src/buffer/: CMakeLists.txt  ring_buf.c  ring_buf.h
src/cli/: CMakeLists.txt  cli.c
src/gui/: CMakeLists.txt  gui.c  gui.h  led.c  led.h  mouse_cursor_icon.c
src/serial/: CMakeLists.txt  serial.c  serial.h
src/time_funcs/: CMakeLists.txt  time_funcs.c  time_funcs.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_button1.c  ui_comp_button1.h  ui_comp_hook.c  ui_comp_hook.h
src/ui/fonts/: ui_font_Courier_New_16.c
src/ui/images/: ui_img_dn_arrow_100px_png.c  ui_img_dn_blk_arrow_100px_grn_highlight_png.c  ui_img_stainless_circle_50px_green_off_png.c  ui_img_stainless_circle_50px_green_on_png.c  ui_img_up_arrow_100px_png.c  ui_img_up_blk_arrow_100px_grn_highlight_png.c
src/ui/screens/: ui_Hello_World.c
tests/: test_ring_buf.c
tests/support/: README.md
